cabal-version:       2.4
name:                toolkit
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable decap
  main-is:             Decap.hs
  ghc-options:         -Wall -O3
  build-depends:       base, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable drop
  main-is:             Drop.hs
  ghc-options:         -Wall -O3
  build-depends:       base, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable take
  main-is:             Take.hs
  ghc-options:         -Wall -O3
  build-depends:       base, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable flip
  main-is:             Flip.hs
  ghc-options:         -Wall -O3
  build-depends:       base, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable expand
  main-is:             Expand.hs
  ghc-options:         -Wall -O3
  build-depends:       aeson, base, base64, bytestring, stm, typed-process, text, unliftio, vector
  hs-source-dirs:      src
  default-language:    Haskell2010